--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,233 @@
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
 body{
     background-color: whitesmoke;
 }
 
-#navbar{
+.navbar{
     display: flex;
-    justify-content: center;
-    align-items: center;
+
     background-color: #333;
-    height: 50px;
+    overflow: hidden;
+    height: 70px;
     padding: 0;
     margin: 0;
+
     /*position: fixed;*/
 }
 
-#apartado{
-    /*display: inline-block;*/
+.navbar a{
+  
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+ 
+}
+
+.navbar > .contenedor{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+#menu{
+    align-self: center;
+}
+
+/*
+.apartado{
+    /*display: inline-block;
     color: white;
     text-decoration: none;
+   
+}
+.estilo1{
     overflow: hidden;
     align-items: center;
-    /*padding: 10px 10px 10 px 10px;*/
+    /*padding: 10px 10px 10 px 10px;
     margin: 10px;
-}
+    font-family: 'Open Sans';
+}*/
 
 .img1{
     width: 100%;
+    min-width: 375px;
+}
+
+.texto-encima{
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    font-size: 50px;
+    font-family: 'Open Sans';
+    font-weight: bolder;
+    color:#333;
+    margin: auto;
+    /*transform: translate(-50%, -50%);*/
+}
+
+.button{
+    background-color:crimson;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  position: absolute;
+    top: 40%;
+    left: 45%;
+    
+}
+
+.parent {
+    display: grid;
+    /*grid-template-columns: repeat(7, 1fr);*/
+    grid-template-rows: 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 0px;
+    grid-template-areas:
+    ". imagen1 . imagen2 . imagen3 .";
+    margin-top: 100px;
+    }
+
+.seccion1{
+    display: inline-block;
+    width: 100%;
+    background-color: rgb(245, 245, 245);
+    /*margin: 50px;*/
+    grid-column: 2;
+}
+
+.seccion2{
+    display: inline-block;
+    width: 100%;
+    background-color: rgb(245, 245, 245);
+    grid-column: 4;
+}
+
+.seccion3{
+    display: inline-block;
+    width: 100%;
+    background-color:rgb(245, 245, 245);
+    grid-column: 6;
+}
+
+.textobienvenida{
+    margin-top: 100px;
+    font-size: 20px;
+    font-family: 'Open Sans';
+    font-weight:lighter;
+    color: #333;
+    inline-size: 600px;
+    overflow-wrap: break-word; 
+    text-align: center;
+    margin: auto;
+    padding-top: 100px;
+}
+
+footer {
+    text-align: center;
+    padding: 3px;
+    background-color: #333;
+    color: white;
+    margin-top: 100px;
+    align-self: baseline;
+  }
+
+.inputsize{
+    display: block;
+    justify-content: center;
+    align-content: center;
+    margin: auto;
+    padding-top: 100px;
+    width: 600px;
+}
+
+.inputsize > .buttonContacto{
+  background-color:crimson;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  margin-top: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 15px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  font-family: 'Open Sans';
+  /*position: absolute;
+  display: flex;
+  align-self: flex-end;*/
+}
+
+.backgroundContacto{
+    background: rgb(0,212,255);
+    background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(79,19,226,1) 100%);
+}
+
+h1{
+    color: white;
+}
+
+#textContact{
+    color: white;
+    padding-bottom: 20px;
+}
+
+.backgroundContacto{
+    background: rgb(0,212,255);
+    background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(79,19,226,1) 100%);
+}
+
+
+
+.seccion_team {
+        display: grid;
+        /*grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 65px;
+        grid-row-gap: 20px;*/
+        grid-template-areas: 
+        "area1 area2 . ."
+        ". . . . "
+        ;
+        grid-column-gap: 50px;
+        
+}
+
+#titulo_team{
+    grid-area: area2;
+    grid-column: 2;
+    color: #333;
+    padding-top: 80px;
+    
+}
+
+.img_team{
+    padding-top: 60px;
+    width: 600px;
+    min-width: 375px;
+    grid-area: area1;
+}
+
+.team1{
+    color: #333;
+    font-size: 18px;
+    font-family: 'Open Sans';
+    overflow-wrap: break-word; 
+    text-align: justify;
+    padding-top: 20px;
 }
